Début du refactor du frontend. TODO : Revoir les appels backend Finir le Makefile Faire le script de deploy.sh